--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,6 @@
     <section class="main2"></section>
     <section class="main"></section>
     <section class="main2"></section>
-    <h1 class="mobile">Sorry We don't support Mobile Screens as of now</h1>
+    <h1 class="mobile">Mobile Support is coming soon!</h1>
 </body>
 </html>
