--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Stats</title>
     <link rel = "icon" href="../static/favicon.png" type = "image/x-icon"> 
-    <link rel="stylesheet" href="{{ url_for('static', filename='landing.css?2') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='landing2.css') }}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
