--- a/templates/info.html
+++ b/templates/info.html
@@ -20,7 +20,7 @@
             //     location.reload()
             //     console.log(window.innerWidth, wInitial)
             // }
-            location.reload()
+            // location.reload()
         })
     </script>
 </head>
